--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Elkin Agilroy Kristan (20415955)",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
